FIX: Minor layout bugs, back end informations are now coming in a better time, showing correct information on condominiun info

--- a/src/styles/commonAreas.css
+++ b/src/styles/commonAreas.css
@@ -26,6 +26,7 @@
   width: 100%;
   margin-top: 20px;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .containerHomeCardsContent {
